WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59932
[GTK] gdk_drawable_get_size() shouldn't be used with GTK+ >= 2.24
https://bugs.webkit.org/show_bug.cgi?id=59932
Summary
[GTK] gdk_drawable_get_size() shouldn't be used with GTK+ >= 2.24
Philippe Normand
Reported
2011-05-02 05:41:44 PDT
gdk_drawable_get_size has been deprecated since version 2.24 and should not be used in newly-written code. Use gdk_window_get_width() and gdk_window_get_height() for GdkWindows. Use gdk_pixmap_get_size() for GdkPixmaps.
Attachments
proposed patch
(2.17 KB, patch)
2011-05-02 05:51 PDT
,
Philippe Normand
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2011-05-02 05:51:28 PDT
Created
attachment 91916
[details]
proposed patch
Philippe Normand
Comment 2
2011-05-02 09:14:46 PDT
Committed
r85480
: <
http://trac.webkit.org/changeset/85480
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug